@@ -39,6 +39,18 @@
 		<title>Variables</title>
 		<variablelist>
 			<varlistentry>
+				<term><option>autosave_interval</option></term>
+				<listitem>
+					<para>The number of seconds that mosquitto will wait 
+					between each time it saves the in-memory database to 
+					disk. If set to 0, the in-memory database will only
+					be saved when mosquitto exits or when receiving the 
+					SIGUSR1 signal. Note that this setting only has an 
+					effect if persistence is enabled.  Defaults to 1800 
+					seconds (30 minutes).</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>ext_sqlite_regex</option></term>
 				<listitem>
 					<para>The path to the sqlite3 regex extension which is
@@ -99,7 +111,7 @@
 			<varlistentry>
 				<term><option>persistence</option></term>
 				<listitem>
-					<para>Can be 1 or 0, denoting true or false. If true, connection, subscription and message data will be written to the disk in mosquitto.db at the location dictated by persistence_location. If false, the data will be stored in memory only. Defaults to 0.</para>
+					<para>Can be 1 or 0, denoting true or false. If true, connection, subscription and message data will be written to the disk in mosquitto.db at the location dictated by persistence_location. When mosquitto is restarted, it will reload the information stored in mosquitto.db. The data will be written to disk when mosquitto closes and also at periodic intervals as defined by autosave_interval. Writing of the persistence database may also be forced by sending mosquitto the SIGUSR1 signal. If false, the data will be stored in memory only. Defaults to 0.</para>
 				</listitem>
 			</varlistentry>
 			<varlistentry>
