@@ -14,16 +14,6 @@
 # This option may be repeated to make mosquitto listen on multiple ports.
 #port 1883
 
-# Save persistent message data to disk (1/0).
-# This saves information about all messages, including subscriptions,
-# currently in-flight messages and retained messages.
-#persistence 0
-
-# Location for persistent database. Must include trailing /
-# Default is an empty string (current directory).
-# Set to /var/lib/mosquitto/ if running as a proper service.
-#persistence_location
-
 # Time in seconds to wait before resending an outgoing QoS=1 or QoS=2 message.
 #retry_interval 20
 
@@ -38,6 +28,27 @@
 # Leave blank to stay as root, but this is not recommended.
 # If run as a non-root user, this setting has no effect.
 #user mosquitto
+
+# ======================================================================
+# Persistence
+# ======================================================================
+
+# If persistence is enabled, save the in-memory database to disk every 
+# autosave_interval seconds. If set to 0, the persistence database will 
+# only be written when mosquitto exists.
+# Note that writing of the persistence database can be forced by sending
+# mosquitto a SIGUSR1 signal.
+#autosave_interval 1800
+
+# Save persistent message data to disk (1/0).
+# This saves information about all messages, including subscriptions,
+# currently in-flight messages and retained messages.
+#persistence 0
+
+# Location for persistent database. Must include trailing /
+# Default is an empty string (current directory).
+# Set to /var/lib/mosquitto/ if running as a proper service.
+#persistence_location
 
 # ======================================================================
 # Logging
