@@ -133,6 +133,7 @@ struct mqtt3_iface {
 };
 
 typedef struct {
+	int autosave_interval;
 	int daemon;
 	char *ext_sqlite_regex;
 	struct mqtt3_iface *iface;
